--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@deepgram/sdk": "^4.11.1",
     "@ricky0123/vad-web": "^0.0.24",
     "dotenv": "^17.2.1",
+    "newsapi": "^2.4.1",
     "next": "15.4.4",
     "openai": "^5.10.2",
     "react": "19.1.0",
