feat: refined UI/UX

--- a/package.json
+++ b/package.json
@@ -11,13 +11,20 @@
     "@deepgram/sdk": "^4.11.1",
     "@pipedream/sdk": "^2.0.0-rc.3",
     "@ricky0123/vad-web": "^0.0.24",
+    "@types/react-world-flags": "^1.6.0",
     "axios": "^1.11.0",
     "dotenv": "^17.2.1",
+    "lucide-react": "^0.536.0",
+    "motion": "^12.23.12",
     "newsapi": "^2.4.1",
     "next": "^15.4.4",
     "openai": "^5.10.2",
+    "p5": "^2.0.3",
     "react": "19.1.0",
     "react-dom": "19.1.0",
+    "react-world-flags": "^1.6.0",
+    "tailwind-merge": "^3.3.1",
+    "tailwind-scrollbar-hide": "^4.0.0",
     "ws": "^8.18.3"
   },
   "devDependencies": {
@@ -25,6 +32,7 @@
     "@tailwindcss/postcss": "^4",
     "@types/dom-speech-recognition": "^0.0.6",
     "@types/node": "^20",
+    "@types/p5": "^1.7.6",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "@types/ws": "^8.18.1",
