--- a/package.json
+++ b/package.json
@@ -10,9 +10,15 @@
   "dependencies": {
     "@deepgram/sdk": "^4.11.1",
     "@pipedream/sdk": "^2.0.0-rc.3",
+    "@radix-ui/react-alert-dialog": "^1.1.14",
+    "@radix-ui/react-dialog": "^1.1.14",
+    "@radix-ui/react-dropdown-menu": "^2.1.15",
+    "@radix-ui/react-slot": "^1.2.3",
     "@ricky0123/vad-web": "^0.0.24",
     "@types/react-world-flags": "^1.6.0",
     "axios": "^1.11.0",
+    "class-variance-authority": "^0.7.1",
+    "clsx": "^2.1.1",
     "dotenv": "^17.2.1",
     "lucide-react": "^0.536.0",
     "motion": "^12.23.12",
@@ -40,6 +46,7 @@
     "eslint-config-next": "15.4.4",
     "tailwindcss": "^4",
     "ts-node": "^10.9.2",
+    "tw-animate-css": "^1.3.6",
     "typescript": "^5"
   }
 }
